# Reversi-MCTS

./: .gitignore  CMakeLists.txt  MCTSPlayer.h  client.html  common.h  httpd.cpp  main.cpp  search.cpp
MCTS/: MCTS.cpp  MCTS.h
MCTS/Modules/: Action.h  Board.cpp  Board.h  Simulator.cpp  Simulator.h  State.h  TreeNode.cpp  TreeNode.h
MCTS/Modules/Simulator/: SimulGreedy.cpp  SimulGreedy.h  SimulMinMax.cpp  SimulMinMax.h  SimulRand.cpp  SimulRand.h  Simulator.h
